Upgraded to a task-based GUI setup paradigm for reliability

--- a/ESP8266_Template/Makefile
+++ b/ESP8266_Template/Makefile
@@ -122,7 +122,7 @@ endif
 TARGET		= app
 
 # which modules (subdirectories) of the project to include in compiling
-MODULES	= user libraries/GPIO libraries/HSPI libraries/ILI9341 libraries/Unity
+MODULES	= user libraries/GPIO libraries/HSPI libraries/Unity
 #HSPI ILI9341
 EXTRA_INCDIR = include
 
